# draw-steel-ai-skills

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  opencode-desktop-tutorial.md  pyproject.toml
.claude/commands/draw-steel-monster-generator/: SKILL.md
.claude/skills/draw-steel-dto-generator/: SKILL.md
.claude/skills/draw-steel-monster-generator/: SKILL.md
.claude/skills/draw-steel-retainer-generator/: SKILL.md
.claude/skills/draw-steel-reward-generator/: SKILL.md
.claude/skills/shared/: ANTI_PATTERNS.md  DRAW_STEEL_BASICS.md
.github/workflows/: release.yml  test.yml
docs/reference/: Draw Steel Monster and Retainer Math.ods  keywords.json
docs/references/: ravenloft-forest-malice.md
openspec/: project.md
openspec/changes/add-dynamic-terrain-objectives/: design.md  proposal.md  tasks.md
openspec/changes/add-foundry-vtt-export/: design.md  proposal.md  tasks.md
openspec/changes/add-id-generator-script/: design.md  proposal.md  tasks.md
openspec/changes/add-markdown-validation/: design.md  proposal.md  tasks.md
tests/: test-model-selection.js  test_all_models_reasoning.py  test_app.py  test_calculate_stats.py  test_chunk_concatenation.py  test_generate_direct.py  test_glm47_e2e.py  test_glm47_integration.py  test_glm47_reasoning.py  test_llm.py  test_modules.py  test_nvidia_glm.py  test_nvidia_problematic.py  test_nvidia_proxy.py  test_prompt_builder.py  test_single_model_reasoning.py  test_stream_debug.py  test_streaming.py  test_url_fetch.py  test_validation.py  test_validation_comprehensive.py  test_webapp.py
(+34 files in other folders)
