[tool.poetry]
name = "ds-monster-generator"
version = "1.2.0"
description = "Draw Steel TTRPG monster generator with 100% formula compliance"
authors = ["Draw Steel Community"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ds-monster-generator"
repository = "https://github.com/yourusername/ds-monster-generator"
documentation = "https://github.com/yourusername/ds-monster-generator#readme"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
